INCLUDE(VigraAddTest)

file(GLOB TEST_TARGETS test_*.cxx)

FOREACH(FILE ${TEST_TARGETS})
    GET_FILENAME_COMPONENT(TARGET ${FILE} NAME_WE)
    VIGRA_ADD_TEST(${TARGET} ${FILE})
    # ADD_EXECUTABLE(${TARGET} EXCLUDE_FROM_ALL ${FILE})
    # ADD_DEPENDENCIES(examples example_${TARGET})
    # TARGET_LINK_LIBRARIES(example_${TARGET} vigraimpex)
ENDFOREACH(FILE)
